[gd_scene load_steps=23 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Base.tscn" type="PackedScene" id=3]
[ext_resource path="res://TouchHandler.gd" type="Script" id=4]
[ext_resource path="res://Poppins-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Procgen.gd" type="Script" id=6]
[ext_resource path="res://UI.gd" type="Script" id=7]
[ext_resource path="res://Unpressed Build Base Button.png" type="Texture" id=8]
[ext_resource path="res://Poppins-ExtraBold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Pressed Build Base Button.png" type="Texture" id=10]
[ext_resource path="res://BuildBaseButton.gd" type="Script" id=11]
[ext_resource path="res://DailyChallengeLabel.gd" type="Script" id=12]
[ext_resource path="res://Ring.png" type="Texture" id=13]
[ext_resource path="res://RingCount.gd" type="Script" id=14]

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
size = 36
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
size = 21
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.372549, 0.403922, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 100, 400 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 280, 170 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
_build_base_button_path = NodePath("../CanvasLayer/BuildBaseButton")

[node name="CreditLabel" type="Label" parent="."]
margin_top = 152.0
margin_right = 400.0
margin_bottom = 227.0
custom_fonts/font = SubResource( 11 )
text = "Song is \"Exit the Premises\" by Kevin Macleod
Programmed and Designed by creikey
With contributions from Garret"
align = 1

[node name="DailyChallengeLabel" type="Label" parent="."]
margin_top = 239.0
margin_right = 400.0
margin_bottom = 314.0
custom_fonts/font = SubResource( 12 )
text = "Daily Challenge Number: "
align = 1
script = ExtResource( 12 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 7 )
player_path = NodePath("../Player")

[node name="ScoreLabel" type="Label" parent="UI"]
anchor_right = 1.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 6 )
text = "1022"
align = 1
valign = 1

[node name="HealthBar" type="ProgressBar" parent="UI"]
anchor_right = 1.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 7 )
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
max_value = 1.0
step = 0.001
value = 0.5

[node name="RingCount" type="Control" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.0
margin_top = -114.0
margin_right = 32.0
margin_bottom = 198.0
script = ExtResource( 14 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/RingCount"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = 155.0
margin_right = 76.0
margin_bottom = 187.0
custom_constants/separation = 28
alignment = 1

[node name="Ring1" type="TextureRect" parent="UI/RingCount/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="Ring2" type="TextureRect" parent="UI/RingCount/HBoxContainer"]
margin_left = 60.0
margin_right = 92.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="Ring3" type="TextureRect" parent="UI/RingCount/HBoxContainer"]
margin_left = 120.0
margin_right = 152.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="TouchHandler" type="Node2D" parent="CanvasLayer"]
script = ExtResource( 4 )

[node name="LeftButton" type="TouchScreenButton" parent="CanvasLayer/TouchHandler"]
position = Vector2( 100, 400 )
shape = SubResource( 3 )
shape_centered = false

[node name="RightButton" type="TouchScreenButton" parent="CanvasLayer/TouchHandler"]
position = Vector2( 300, 400 )
shape = SubResource( 3 )
shape_centered = false

[node name="BuildBaseButton" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 74, 630 )
scale = Vector2( 0.36, 0.36 )
normal = ExtResource( 8 )
pressed = ExtResource( 10 )
shape = SubResource( 10 )
script = ExtResource( 11 )

[node name="Procgen" type="Node2D" parent="."]
script = ExtResource( 6 )
player_path = NodePath("../Player")

[node name="Base" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="CanvasLayer/BuildBaseButton" to="Player" method="_on_BuildBaseButton_pressed"]
